base/go-httpbin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    discovery.3scale.net: 'true'
  annotations:
    discovery.3scale.net/path: /
    discovery.3scale.net/port: '8080'
    discovery.3scale.net/scheme: https
    service.alpha.openshift.io/serving-cert-secret-name: tls-cert
    service.beta.openshift.io/serving-cert-secret-name: tls-cert
  name: go-httpbin
spec:
  selector:
    app: go-httpbin
    deploymentconfig: go-httpbin
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
